2014-09-16  Richard Frith-Macdonald <rfm@gnu.org>

	* EcCommand.m: Simplify handling of loss of process and configuration
	error alarms.  Clear such alarms when we receive a ping from the
	process.

2014-09-04  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Fix missing clear after unable to register with name
	server.

2014-09-02  Richard Frith-Macdonald <rfm@gnu.org>

	* EcControl.m: If a Command server on a host registers and we already
	have a Command server registered, have the new registration replace
	the old one rather than rejecting it.  The aim is to handle a race
	condition where a Command server is re-registering after some network
	problem and the old registration is still in place.
	* EcAlerter.m: Add more debug logging to show what elarms/alerts are
	handled by what rules.

2014-07-30  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Added +ecSetup method to create/initialise the singleton instance.

2014-07-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Command.m:
	* Control.m:
	Implement auto-restart ...
	Run a 'Watcher' process as a daemon with the actual server as a
	subtask.  If the subtask dies with a status other than zero,
	restart it after a 30 second delay.

2014-06-20  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Make sure the NSHost cache is flushed at least
	once per minute (by -ecNewMinute:) so that any stale information
	is replaced reasonably promptly.

2014-05-16  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmDestination.m: Perform all connection operations in
	main thread (forwarding etc) and ensure that we run the
	current run loop while waiting for startup and shutdown.
	* EcLogger.m: Use floating point flush interval for modern
	systems which run faster and might want to flush more than
	once per second.
	* EcProcess.m: Don't start handling timeouts until the
	process is actually running (so we don't get any during
	initialisation of the class).